# apis/router.go
@@ -1,7 +1,6 @@
 package apis
 
 import (
-	"github.com/protengplus/proteng-bff/configs"
 	"github.com/protengplus/proteng-bff/middleware"
 
 	"github.com/gin-gonic/gin"
@@ -32,7 +31,7 @@ func InitRouter(r *gin.Engine) {
 	userRouter.POST("/auth/login/admin", SignInAdmin)
 
 	conductorRouter := r.Group("/proteng-conductor")
-	conductorUrl := configs.Config.ConductorUrl
+	// conductorUrl := configs.Config.ConductorUrl
 
 	conductorRouter.GET("/jobs", middleware.Authenticate(), middleware.Authorize("user"), GetAllJobs)
 	conductorRouter.GET("/jobs/:id", middleware.Authenticate(), middleware.Authorize("user"), GetJob)
@@ -42,10 +41,10 @@ func InitRouter(r *gin.Engine) {
 	conductorRouter.POST("/jobs/:id/run", middleware.Authenticate(), middleware.Authorize("user"), RunJob)
 	conductorRouter.POST("/jobs/:id/:stage", middleware.Authenticate(), middleware.Authorize("user"), CreateDuplicateJob)
 
-	conductorRouter.GET("/mutations", middleware.Authenticate(), middleware.Authorize("user"), func(c *gin.Context) { Forward(conductorUrl + "/mutations?" + c.Request.URL.RawQuery)(c) })
-	conductorRouter.GET("/mutations/:id", middleware.Authenticate(), middleware.Authorize("user"), func(c *gin.Context) { Forward(conductorUrl + "/mutations/" + c.Param("id"))(c) })
-	conductorRouter.POST("/mutations", middleware.Authenticate(), middleware.Authorize("user"), Forward(conductorUrl+"/mutations"))
-	conductorRouter.PUT("/mutations/:id", middleware.Authenticate(), middleware.Authorize("user"), func(c *gin.Context) { Forward(conductorUrl + "/mutations/" + c.Param("id"))(c) })
-	conductorRouter.DELETE("/mutations/:id", middleware.Authenticate(), middleware.Authorize("user"), func(c *gin.Context) { Forward(conductorUrl + "/mutations/" + c.Param("id"))(c) })
-	conductorRouter.POST("/mutations/:id/run", middleware.Authenticate(), middleware.Authorize("user"), func(c *gin.Context) { Forward(conductorUrl + "/mutations/" + c.Param("id") + "/run")(c) })
+	conductorRouter.GET("/mutations", middleware.Authenticate(), middleware.Authorize("user"), GetAllMutations)
+	conductorRouter.GET("/mutations/:id", middleware.Authenticate(), middleware.Authorize("user"), GetMutation)
+	conductorRouter.POST("/mutations", middleware.Authenticate(), middleware.Authorize("user"), CreateMutation)
+	conductorRouter.PUT("/mutations/:id", middleware.Authenticate(), middleware.Authorize("user"), UpdateMutation)
+	conductorRouter.DELETE("/mutations/:id", middleware.Authenticate(), middleware.Authorize("user"), DeleteMutation)
+	conductorRouter.POST("/mutations/:id/run", middleware.Authenticate(), middleware.Authorize("user"), RunMutation)
 }
